--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,40 @@
 
   Change Log / Release Notes
 
+？？？？？？
+-----------------------------
+
+
+  AI:
+  
+  带(?)的为已修复，但不确定是否有效
+  
+  +贾诩对自己用黑色天子
+  
+  +使用装备时优先装玉玺
+
+  +有时会无懈自己的无懈
+  
+  +暗将胃炎不会发动狂骨
+
+  +暗将贾诩被黑南蛮放死了
+  
+  +对同一人多次使用卡牌知己知彼看手牌
+  
+  +蒋钦没有手牌也能使用技能尚义
+  
+  +优化联军盛宴的无懈可击AI
+  
+  +身份比较明显时，敕令不再弃置装备牌
+  
+  +优化身份判断
+  
+  +挑衅、借刀等类似技能，不会使用方天杀
+  
+  ?把母牛传给敌人
+  
+  ?使用无目标的杀
+
 0.8.0 beta3 (Nov 30 2014）
 -----------------------------
 啦啦生日纪念版！！
